required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (SVN branch-5-2)
--------------------------------

- Fixed Blobs not filtered in OracleSpatial Attribute/WFS queries (#2829)

- Add USE_MSSQL2008_PLUGIN to the MSSQL 2008 compile options (#2823)

- Add support to compile mssql2008 when SDE or ORACLE is not compiled (#2851)

- mapagg.cpp: fix center of rotation for truetype marker symbols (#2848)

- mapowscommon.c: output version string correctly (#2821)

- mapwmslayer.c: Correct half pixel error in WMS layer's BBOX request to 
  remote WMS (#2843)


Version 5.2.1 (2008-12-01):
---------------------------

- Exposed PIXELS value via URL configuration

- Add Support for SLD TextSymbolizer HALO and ANGLE (#2806)

- Fix crash when an invalid bbox filter is used (#2805)

- raster query fix for tileindex with relative paths (#2722)

- Fix for the access violation caused by msMSSQL2008LayerGetShape (#2795)

- Fixed msMSSQL2008LayerGetItems to retrieve the column names properly (#2791)

- Prevent from calling msMSSQL2008CloseConnection from msMSSQL2008LayerClose
  causing memory corruption issues (#2790) 

- fix some integer rounding errors in the agg line offseter (#2659)

- fix a bug with shapes with duplicate end points. was causing NaNs 
  in the angle follow placement code (#2695)

- memory leak in msInsertLayer, from Ned Horning (#2784)

- legend keyimage resampling with agg (#2715)

- tileindexed rasters when DATA is manipulated via mapscript work (#2783)

- PHP: add priority attribute to the label object (#2782)

- Fixed bug when QUERYMAP hilite color is set and the shape's color in a 
  layer is from a data source (#2769)

- PHP paste image should also work with AGG (#2682)
