@@ -13,6 +13,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN branch-5-2)
 --------------------------------
 
+- fix when layer status = DEFAULT and passing list of layers (#2066)
+
 - Fixed Blobs not filtered in OracleSpatial Attribute/WFS queries (#2829)
 
 - Add USE_MSSQL2008_PLUGIN to the MSSQL 2008 compile options (#2823)
